--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+
 @import "tailwindcss";
+
+* {
+  font-family: 'Manrope', sans-serif;
+  font-weight: 500;
+}
+
+@theme {
+  --color-primary: #5044E5;
+}
